Fix timestamps search button jumping to another line on screens with width between 463px and 470px

--- a/style/main.css
+++ b/style/main.css
@@ -208,6 +208,15 @@
   }
 }
 
+@media only screen and (max-width: 29.375em) { /* 470px */
+  /* Fixes broken layout in which timestamps search button
+  jumps to another line. It occures between 470px and 464px. */
+  .btn_timestamps {
+    font-size: 0.9rem;
+    padding: 5px;
+  }
+}
+
 @media only screen and (max-width: 28.938em) { /* 463px */
   .result-header,
   .result-summary,
@@ -218,7 +227,8 @@
     font-size: 0.6rem;
     height: 22px;
   }
-  .btn {
+  .btn,
+  .btn_timestamps {
     font-size: 0.7rem;
     padding: 4px;
   }
@@ -246,7 +256,8 @@
     font-size:  0.5rem;
     height: 20px;
   }
-  .btn {
+  .btn,
+  .btn_timestamps {
     font-size: 0.6rem;
     padding: 2px;
   }
